--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
         <picture class="card-image">
           <source
             media="(max-width:375px)"
-            srcset="images/image-product-mobile.jpg"
+            srcset="image-product-mobile.jpg"
             alt="Mobile perfume!"
             id="perfume-img-mobile"
           />
           <img
-            src="images/image-product-desktop.jpg"
+            src="image-product-desktop.jpg"
             alt="Perfume!"
             id="perfume-img-desktop"
           />
